parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Reports.Shell/content/Controllers/Reports/ReportsController.cs.pp
namespace $rootnamespace$.Controllers.Reports
{
    using System.Web.Mvc;

    public class ReportsController : Controller
    {
        public ActionResult Index()
        {
            return View();
        }
    }
}
